--- a/index.html
+++ b/index.html
@@ -1613,10 +1613,10 @@
                            <div class="product-description">
                               <h2 class="prodict-title">fortune soyabean oil 5 liter</h2>
                               <div class="row g-0 mt-3">
-                                 <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
+                                 <div class="col-3">
                                     <p class="price-label pt-1">price :</p>
                                  </div>
-                                 <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10">
+                                 <div class="col-9">
                                     <div class="price">
                                        <strong>tk 275.00</strong>
                                        <span class="quantity">/pcs</span>
@@ -1625,10 +1625,10 @@
                               </div>
                               <hr>
                               <div class="row g-0 mt-3">
-                                 <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
+                                 <div class="col-3">
                                     <p class="price-label">quantity :</p>
                                  </div>
-                                 <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10">
+                                 <div class="col-9">
                                     <div class="quantity-form">
                                        <form action="">
                                           <input type="text" class="form-control" id="productPrice" value="0" name="productPrice">
@@ -1640,10 +1640,10 @@
                               </div>
                               <hr>
                               <div class="row g-0 mt-3">
-                                 <div class="col-xs-12 col-sm-12 col-md-2 col-lg-2">
+                                 <div class="col-4">
                                     <p class="price-label pt-1">total price :</p>
                                  </div>
-                                 <div class="col-xs-12 col-sm-12 col-md-10 col-lg-10">
+                                 <div class="col-8">
                                     <div class="price">
                                        <strong>tk 275.00</strong>
                                        <span class="quantity">tk</span>
